tests/invalid/foreign_procs_exist_type.err_exp
foreign_procs_exist_type.m:052: In clause for predicate `mercury_test'/2:
foreign_procs_exist_type.m:052:   in argument 1 of call to predicate
foreign_procs_exist_type.m:052:   `foreign_procs_exist_type.make_t'/1:
foreign_procs_exist_type.m:052:   type error: variable `T2' has type
foreign_procs_exist_type.m:052:     `(some [T_2] T_2)',
foreign_procs_exist_type.m:052:   expected type was
foreign_procs_exist_type.m:052:     `(some [T_3] T_3)'.
foreign_procs_exist_type.m:060: In clause for predicate `foreign_pred_test'/2:
foreign_procs_exist_type.m:060:   type error: variable `HeadVar__2' has type
foreign_procs_exist_type.m:060:     `(some [T_2] T_2)',
foreign_procs_exist_type.m:060:   expected type was
foreign_procs_exist_type.m:060:     `(some [T_3] T_3)'.
foreign_procs_exist_type.m:104: In clause for function `foreign_func_test'/1:
foreign_procs_exist_type.m:104:   type error: variable `HeadVar__2' has type
foreign_procs_exist_type.m:104:     `(some [T_2] T_2)',
foreign_procs_exist_type.m:104:   expected type was
foreign_procs_exist_type.m:104:     `(some [T_3] T_3)'.
For more information, recompile with `-E'.
